<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/user_entered_passcode"
        android:layout_width="242dp"
        android:layout_height="116dp"
        android:fontFamily="serif"
        android:text=""
        android:textAllCaps="false"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <Button
        android:id="@+id/submit"
        android:layout_width="164dp"
        android:layout_height="88dp"
        android:layout_marginBottom="48dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/clear" />

    <Button
        android:id="@+id/clear"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="68dp"
        android:text="@string/second_fragment_clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="40dp"
        android:text="@string/second_fragment_number_two"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="40dp"
        android:text="@string/second_fragment_number_one"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="228dp"
        android:text="@string/second_fragment_number_four"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:text="@string/second_fragment_number_three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_four"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="335dp"
        android:layout_height="96dp"
        android:text="@string/second_fragment_instructions"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/user_entered_passcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>